# modelrouter

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.release  README-HOOKS.md  README.md  config.example.toml  docker-compose.otel.yml  docker-compose.yml  install_diagnostics.md  session_stats.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
contrib/: dev.modelrouter.plist  modelrouter.service
docs/: 2026-04-02-litellm-feature-gap.md  local-setup.md
docs/hooks/: headroom-compress.py  not-diamond-router.md
docs/plans/: 2026-04-20-vertex-provider.md  PHASES_SUMMARY.md  competitor-comparison.md  implementation-plan.md
migrations/: 001_initial.sql  002_per_key_budgets.sql  003_cost_ledger_api_key.sql  004_spend_reset.sql  005_api_key_expiry.sql  006_concurrent_limit.sql  007_api_key_tag.sql  008_budget_rule_tag.sql  009_mcp_servers.sql  010_admin_oidc.sql  011_api_key_project.sql  012_keys_users_refactor.sql  013_add_disabled_at.sql  014_groups.sql  015_budgets.sql  016_models.sql  017_cost_ledger_nullable_prompt.sql  018_webhook_callbacks.sql
migrations/postgres/: 001_initial.sql  002_per_key_budgets.sql  003_cost_ledger_api_key.sql  004_mcp_servers.sql  005_admin_oidc.sql  012_keys_users_refactor.sql  013_add_disabled_at.sql  014_groups.sql  015_budgets.sql  016_models.sql  017_cost_ledger_nullable_prompt.sql  018_webhook_callbacks.sql  (+1 more)
otel-collector/: config.yml  prometheus.yml
src/: lib.rs  main.rs
tests/: test_anthropic_cache.rs  test_archival.rs  test_audio.rs  test_auth.rs  test_azure.rs  test_bedrock.rs  test_cache.rs  test_callbacks.rs  test_circuit_breaker.rs  test_completions.rs  test_complexity.rs  test_concurrency.rs  test_config.rs  test_cost.rs  test_dashboard.rs  test_declarative_policy.rs  test_embeddings.rs  test_guardrails.rs  test_hooks.rs  test_hot_reload.rs  test_images.rs  test_ip_rate_limit.rs  test_key_expiry.rs  test_load_balancer.rs  test_messages.rs  test_migrations.rs  test_oidc.rs  test_per_key_budgets.rs  test_policy.rs  test_prometheus.rs  test_report.rs  test_responses.rs  test_retry.rs  test_router.rs  test_session_limits.rs  test_tag_budgets.rs  test_telemetry.rs  test_vertex.rs
(+186 files in other folders)
