[package]
name = "modelrouter"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[[bin]]
name = "modelrouter"
path = "src/main.rs"

[lib]
name = "modelrouter"
path = "src/lib.rs"

[features]
default = []
postgres = ["sqlx/postgres"]
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:opentelemetry-appender-tracing",
    "dep:tracing-opentelemetry",
]

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls", "migrate", "macros", "chrono", "uuid"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
clap = { version = "4", features = ["derive", "env"] }
config = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
minijinja = { version = "2", features = ["loader"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1"
anyhow = "1"
bcrypt = "0.15"
jsonwebtoken = "9"
comfy-table = "7"
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
sha2 = "0.10"
hex = "0.4"
time = { version = "0.3", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dirs = "5"
shellexpand = "3"
async-trait = "0.1"
futures = "0.3"
bytes = "1"
dashmap = "6"

# ── OpenTelemetry (--features otel) ────────────────────────────────────
opentelemetry                  = { version = "0.27", features = ["logs"], optional = true }
opentelemetry_sdk              = { version = "0.27", features = ["rt-tokio", "logs"], optional = true }
opentelemetry-otlp             = { version = "0.27", features = ["grpc-tonic", "logs"], optional = true }
opentelemetry-appender-tracing = { version = "0.27", optional = true }
tracing-opentelemetry          = { version = "0.28", optional = true }

[dev-dependencies]
axum-test = "14"
tokio = { version = "1", features = ["full"] }
serial_test = "3"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "testing", "experimental_metrics_periodic_reader_no_runtime"] }
